2021-10-27 Gregory John Casamento <greg.casamento@gmail.com>

	* Source/GSToolTips.m: Add extra pixels so that tool tip doesn't
        overrun the window.

2021-10-25 Riccardo Mottola <rm@gnu.org>

	* Source/NSTextStorage.m:
	Keep local variables to ensure correct values during recursion.

2021-10-21 Gregory John Casamento <greg.casamento@gmail.com>

	* Headers/AppKit/NSGlyphInfo.[hm]: Class which provides info about
	each glyph depending on mappings.  Currently only identity mapping
	is supported.

2021-10-13 Gregory John Casamento <greg.casamento@gmail.com>

	* Headers/AppKit/NSToolbar.h: Update to use formal protocol if
        API level is 10.6+.

2021-10-13 Gregory John Casamento <greg.casamento@gmail.com>

	* Headers/AppKit/NSTabView.h: Update NSTabView.h to have a formal
        protocol for NSTabViewDelegate if the API we are using is 10.6 or
        later.

2021-10-13 Gregory John Casamento <greg.casamento@gmail.com>

	* Source/NSTableView.m: Remove exception where lastIndex is greater
        than number of columns.

2021-10-13 Gregory John Casamento <greg.casamento@gmail.com>

	* Headers/Additions/GNUstepGUI/GSTheme.h: Add tabview enum
	* Source/GSAutocompleteWindow.h: Fix signature mismatch
	* Source/GSThemeDrawing.m: Move tabview enum to header.

2021-10-12 Gregory John Casamento <greg.casamento@gmail.com>

	* Source/NSBitmapImageRep.m: Change initWithBitmapDataPlanes:...
        to conform to Apple documented behavior and return nil if it
        cannot initialize with the given arguments.

2021-10-03 Gregory John Casamento <greg.casamento@gmail.com>

	* Headers/AppKit/NSComboBox.h: Add check to see if @optional
        is available.

2021-10-02 Gregory John Casamento <greg.casamento@gmail.com>

	* Source/GSToolTips.m: Use RELEASE and AUTORELEASE macros where
	appropriate.  Minor fixes.
	* Source/NSPopover.m: Add code to draw an outline outside of the
	view.  Add GSPopoverPanel and GSPopoverView private classes.
