@@ -1,5 +1,9 @@
 2021-10-27 Gregory John Casamento <greg.casamento@gmail.com>
 
+	* Source/NSScrollView.m: Add scrollview keys from TP merge.
+
+2021-10-27 Gregory John Casamento <greg.casamento@gmail.com>
+
 	* Source/GSToolTips.m: Add extra pixels so that tool tip doesn't
         overrun the window.
 
